--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,32 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_masjid">MasjidActivity</string>
+
+    <string name="started_title">Al-QuranKU</string>
+    <string name="started_sub_title">
+        Nice to meet you, come join!
+        <br><b>Login</b>
+            if you already have an account.</br>
+        <br><b>Register</b>
+            to get started with the app.</br>
+    </string>
+    <string name="login_title">Login to app</string>
+    <string name="login_sub_title"><font color="#00C9B8">
+        <b>Login</b></font>
+        if you already have a account.
+    </string>
+    <string name="login_havent_account">
+        I don\'t have an account
+        <font color="#00C9B8"><b>Register</b></font>
+    </string>
+
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
